--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,16 @@
   <link rel="apple-touch-icon" sizes="192x192" href="//play.podcst.io/launcher-192.png" />
 </head>
 <body>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/sw.js').then(function(registration) {
+          console.log('SW Scope:', registration.scope);
+        }).catch(function(err) {
+          console.log('SW Error:', err);
+        });
+      });
+    }
+  </script>
 </body>
 </html>
