--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <script>
-    if ('serviceWorker' in navigator) {
+    if (location.protocol === 'https:' && 'serviceWorker' in navigator) {
       window.addEventListener('load', function() {
         navigator.serviceWorker.register('/sw.js').then(function(registration) {
           console.log('SW Scope:', registration.scope);
