--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,17 +29,20 @@
   <meta name=apple-mobile-web-app-status-bar-style content="black">
   <link rel="apple-touch-icon" sizes="192x192" href="//play.podcst.io/launcher-192.png" />
 </head>
+
 <body>
+  <div id="root"></div>
   <script>
     if (location.protocol === 'https:' && 'serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/sw.js').then(function(registration) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/sw.js').then(function (registration) {
           console.log('SW Scope:', registration.scope);
-        }).catch(function(err) {
+        }).catch(function (err) {
           console.log('SW Error:', err);
         });
       });
     }
   </script>
 </body>
+
 </html>
