Fix manifest link

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Podcst</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#212121">
   <meta property="og:title" content="Podcst | Plays your favourite podcasts on all devices" />
   <meta property="og:site_name" content="Podcst" />
