Make links absolute add apple metadata

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Podcst</title>
   <link rel="manifest" href="/manifest.json">
@@ -12,22 +12,29 @@
   <meta property="og:site_name" content="Podcst" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Plays your favourite podcasts on all devices" />
-  <meta property="og:url" content="//play.podcst.io" />
+  <meta property="og:url" content="https://play.podcst.io" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:image" content="//play.podcst.io/icons/launcher-512.png" />
+  <meta property="og:image" content="https://play.podcst.io/icons/launcher-512.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description" content="Plays your favourite podcasts on all devices" />
   <meta name="twitter:title" content="Podcst | Plays your favourite podcasts on all devices" />
   <meta name="twitter:site" content="@shantanuraj" />
-  <meta name="twitter:image" content="//play.podcst.io/icons/launcher-512.png" />
+  <meta name="twitter:image" content="https://play.podcst.io/icons/launcher-512.png" />
   <meta name="twitter:creator" content="@shantanuraj" />
 
-  <link rel="shortcut icon" href="//play.podcst.io/favicon.ico">
+  <link rel="shortcut icon" href="https://play.podcst.io/icons/launcher-192.png">
+  <link rel="shortcut icon" type="image/x-icon" href="https://play.podcst.io/favicon.ico">
+  <link rel="icon" type="image/ico" href="https://play.podcst.io/icons/launcher-48.png">
+
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name=apple-mobile-web-app-title content="Podcst">
-  <meta name=apple-mobile-web-app-status-bar-style content="black">
-  <link rel="apple-touch-icon" sizes="192x192" href="//play.podcst.io/launcher-192.png" />
+  <meta name=apple-mobile-web-app-status-bar-style content="black-translucent">
+
+  <link rel="apple-touch-icon" href="https://play.podcst.io/icons/launcher-96.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="https://play.podcst.io/icons/launcher-144.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="https://play.podcst.io/icons/launcher-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="https://play.podcst.io/icons/launcher-512.png">
 </head>
 
 <body>
