--- a/public/index.html
+++ b/public/index.html
@@ -12,29 +12,29 @@
   <meta property="og:site_name" content="Podcst" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Plays your favourite podcasts on all devices" />
-  <meta property="og:url" content="https://play.podcst.io" />
+  <meta property="og:url" content="<%= htmlWebpackPlugin.options.appUrl %>" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:image" content="https://play.podcst.io/icons/launcher-512.png" />
+  <meta property="og:image" content="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-512.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description" content="Plays your favourite podcasts on all devices" />
   <meta name="twitter:title" content="Podcst | Plays your favourite podcasts on all devices" />
   <meta name="twitter:site" content="@shantanuraj" />
-  <meta name="twitter:image" content="https://play.podcst.io/icons/launcher-512.png" />
+  <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-512.png" />
   <meta name="twitter:creator" content="@shantanuraj" />
 
-  <link rel="shortcut icon" href="https://play.podcst.io/icons/launcher-192.png">
-  <link rel="shortcut icon" type="image/x-icon" href="https://play.podcst.io/favicon.ico">
-  <link rel="icon" type="image/ico" href="https://play.podcst.io/icons/launcher-48.png">
+  <link rel="shortcut icon" href="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-192.png">
+  <link rel="shortcut icon" type="image/x-icon" href="<%= htmlWebpackPlugin.options.appUrl %>/favicon.ico">
+  <link rel="icon" type="image/ico" href="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-48.png">
 
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name=apple-mobile-web-app-title content="Podcst">
   <meta name=apple-mobile-web-app-status-bar-style content="black-translucent">
 
-  <link rel="apple-touch-icon" href="https://play.podcst.io/icons/launcher-96.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="https://play.podcst.io/icons/launcher-144.png">
-  <link rel="apple-touch-icon" sizes="192x192" href="https://play.podcst.io/icons/launcher-192.png">
-  <link rel="apple-touch-icon" sizes="512x512" href="https://play.podcst.io/icons/launcher-512.png">
+  <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-96.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-144.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="<%= htmlWebpackPlugin.options.appUrl %>/icons/launcher-512.png">
 </head>
 
 <body>
