--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:creator" content="@shantanuraj" />
 
   <link rel="shortcut icon" href="<%= htmlWebpackPlugin.options.cdnUrl %>/icons/launcher-192.png">
-  <link rel="shortcut icon" type="image/x-icon" href="<%= htmlWebpackPlugin.options.appUrl %>/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="<%= htmlWebpackPlugin.options.cdnUrl %>/favicon.ico">
   <link rel="icon" type="image/ico" href="<%= htmlWebpackPlugin.options.cdnUrl %>/icons/launcher-48.png">
 
   <meta name="mobile-web-app-capable" content="yes" />
