Generate static webpages to be deployed
- Tempoarily remove ssr

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Podcst</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#212121">
   <meta property="og:title" content="Podcst | Plays your favourite podcasts on all devices" />
