--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,13 @@
       });
     }
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43262567-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-43262567-4');
+  </script>
 </body>
 
 </html>
